# tws-strategies

./: CMakeLists.txt  IndicatorTypes.cpp  IndicatorTypes.h  MultiCandle.h  ReqIdTypes.h  accountmanager.cpp  accountmanager.h  agentcontroller.h  databrokeragent.cpp  databrokeragent.h  earningsvolatilitystrat.cpp  earningsvolatilitystrat.h  earningsvolatilitystratmonitor.cpp  earningsvolatilitystratmonitor.h  ewrapperqthreaded.cpp  ewrapperqthreaded.h  logformatter.h  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowdrawing.cpp  marketdatasingleton.cpp  marketdatasingleton.h  optionschainagent.cpp  optionschainagent.h  ordersmanager.cpp  ordersmanager.h  rapidJsonHelpers.h  strategies.h  ta-lib-wrapper.cpp  ta-lib-wrapper.h  timefuncs.h  trendfollowstrat.cpp  trendfollowstrat.h  twsclientqthreaded.cpp  twsclientqthreaded.h
config/: trendwatchlist.json
mytwsapi/: CMakeLists.txt  versioninfo.txt
mytwsapi/client/: CMakeLists.txt
